Thu Sep 12 19:10:35 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (gnome2): libmrproject requires libgsf

Thu Sep 12 19:08:58 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py: s/monkey-sound/monkey-media/g

2002-09-10  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome2): get mrproject from GNOME CVS now (patch
	from Xavier Ordoquy.

2002-09-09  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome2): updates from Will Lashell (bug #92581).

2002-09-06  Havoc Pennington  <hp@pobox.com>

	* moduleinfo.py (gnome2): add right branch for gail

Thu Sep  5 15:28:35 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (gnome-build): Require gtkhtml2 as well.

2002-08-18  Anders Carlsson  <andersca@gnu.org>

	* bootstrap.py (bootstraps): Fetch automake-1.4 as well as
	automake-1.6.

2002-07-24  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome-control-center): set to gnome-2-0 branch
	for gnome20 module set (and head for gnome22).
	(anjuta2): depends on libzvt (from bug #87661).

2002-07-14  Havoc Pennington  <hp@pobox.com>

	* moduleinfo.py (gnome2): add branch to profterm
	(gnome22): put profterm HEAD in gnome22

2002-07-13  Xavier Ordoquy <MCArkan@gael.sourceforge.net>

	* moduleinfo.py:
	Added dia-newcanvas and gael2 to the gnome20 set.

2002-07-05  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22): add start of gnome22 set (based on
	gnome20), which at the moment just has head glib, pango and gtk+.

	* module.py (ModuleSet.__init__): add optional "baseset" argument
	to constructor, based on idea by hp.

	* module.py (BuildScript.build): rest of jrb's patch.

	* jhbuild.py (do_build): add --start-at arg from patch by Jonathan
	Blandford <jrb@redhat.com> (from bug #87344)

	* moduleinfo.py (rhythmbox): rhythmbox module is called rhythmbox
	now.  Patch from hingwah@gnupilgrims.org (from bug #85905).
	(gnomeicu): Another patch from hingwah (from bug #85907).
