@@ -1,3 +1,8 @@
+2002-09-16  James Henstridge  <james@daa.com.au>
+
+	* moduleinfo.py (gnome22): s/profterm/gnome-terminal/
+	(gnome22): add gnome-2-0 branch for libglade.
+
 Thu Sep 12 19:10:35 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* moduleinfo.py (gnome2): libmrproject requires libgsf
